--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="no_network">网络不可用请检查网络重试</string>
     <string name="cardid_not_null">身份证号码不能为空</string>
     <string name="schoolid_not_null">学籍号不能为空</string>
+    <string name="local_url">http://192.168.1.119:112</string>
+    <string name="activate_success">账号激活成功</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
