--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="schoolid_not_null">学籍号不能为空</string>
     <string name="local_url">http://192.168.1.119:112</string>
     <string name="activate_success">账号激活成功</string>
+    <string name="wenzi_lenth_low">请输入100-300字的内容</string>
+    <string name="commit_success">提交成功</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
