--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="local_url">http://192.168.1.119:112</string>
     <string name="activate_success">账号激活成功</string>
     <string name="wenzi_lenth_low">请输入100-300字的内容</string>
+    <string name="pic_lenth_low">请选择图片上传</string>
     <string name="commit_success">提交成功</string>
 
     <!-- TODO: Remove or change this placeholder text -->
