--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,17 @@
     <string name="no_network">网络不可用请检查网络重试</string>
     <string name="cardid_not_null">身份证号码不能为空</string>
     <string name="schoolid_not_null">学籍号不能为空</string>
+    <string name="phone_not_null">手机号不能为空</string>
     <string name="local_url">http://192.168.1.119:112</string>
+    <!--<string name="local_url">http://101.201.197.224:112</string>-->
     <string name="uploadFile">http://192.168.1.131:83/index.php/upload/index</string>
+    <!--<string name="uploadFile">http://101.201.197.224:83/index.php/upload/index</string>-->
     <string name="activate_success">账号激活成功</string>
     <string name="wenzi_lenth_low">请输入100-300字的内容</string>
     <string name="pic_lenth_low">请选择图片上传</string>
     <string name="video_not_null">请拍摄视频上传</string>
     <string name="commit_success">提交成功</string>
+    <string name="send_code_success">验证码已发送到手机</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
