--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="uploadFile">http://192.168.1.131:83/index.php/upload/index</string>
     <!--<string name="uploadFile">http://101.201.197.224:83/index.php/upload/index</string>-->
     <string name="activate_success">账号激活成功</string>
-    <string name="wenzi_lenth_low">请输入100-300字的内容</string>
+    <string name="wenzi_lenth_low">请输入文字的内容</string>
     <string name="pic_lenth_low">请选择图片上传</string>
     <string name="video_not_null">请拍摄视频上传</string>
     <string name="commit_success">提交成功</string>
