--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!--<string name="local_url">http://101.201.197.224:112</string>-->
     <!--<string name="uploadFile">http://192.168.1.131:83/index.php/upload/index</string>-->
     <string name="uploadFile">http://222.74.65.87:82/upload.php</string>
+    <string name="uploadUrl">http://222.74.65.87:82</string>
     <string name="activate_success">账号激活成功</string>
     <string name="wenzi_lenth_low">请输入文字的内容</string>
     <string name="pic_lenth_low">请选择图片上传</string>
